data/usersCode/hjsgj/question6/error.txt
/home/gauravghati/clash2/data/usersCode/hjsgj/question6/code6-0.cpp:1:1: error: ‘dsgfvbyrsdf’ does not name a type
 dsgfvbyrsdf
 ^~~~~~~~~~~
